# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is an api for querying the Marvel characters.",
-        "title": "Marvel Characters API",
+        "description": "This is an api for notification service.",
+        "title": "Notification API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Dr Ahmad Hassan",
@@ -12,9 +12,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/characters": {
-            "get": {
-                "description": "Returns the IDs of all the Marvel Characters.",
+        "/notification/activate": {
+            "post": {
+                "description": "todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,19 +22,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Characters"
+                    "Notification"
                 ],
-                "summary": "Serves an endpoint /characters that returns all the Marvel character ids in a JSON array of numbers.",
+                "summary": "Activate the notification",
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer",
-                                "example": 1010674
-                            }
-                        }
+                    "201": {
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
@@ -51,9 +44,9 @@
                 }
             }
         },
-        "/characters/{characterId}": {
-            "get": {
-                "description": "Serve an endpoint /characters/{characterId} that returns only the id, name and description of the character.",
+        "/notification/subscribe/{url}": {
+            "post": {
+                "description": "todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,24 +54,28 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Characters"
+                    "Notification"
                 ],
-                "summary": "Gets the details of a particular Marvel character",
+                "summary": "Test the notification",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "The notification url",
+                        "name": "url",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
-                        "description": "ID of the character",
-                        "name": "characterId",
+                        "description": "The id of the customer",
+                        "name": "customerId",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Character"
-                        }
+                    "201": {
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
@@ -86,10 +83,36 @@
                             "$ref": "#/definitions/model.HTTPError400"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.HTTPError404"
+                            "$ref": "#/definitions/model.HTTPError500"
+                        }
+                    }
+                }
+            }
+        },
+        "/notification/test": {
+            "post": {
+                "description": "todo",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Test the notification",
+                "responses": {
+                    "201": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError400"
                         }
                     },
                     "500": {
@@ -103,20 +126,6 @@
         }
     },
     "definitions": {
-        "model.Character": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "model.HTTPError400": {
             "type": "object",
             "properties": {
@@ -127,19 +136,6 @@
                 "message": {
                     "type": "string",
                     "example": "status bad request"
-                }
-            }
-        },
-        "model.HTTPError404": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 404
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Not Found"
                 }
             }
         },
